2003-02-12  Mo DeJong  <mdejong@users.sourceforge.net>

	Regenerate all Makefile.in files because I
	forgot to add clsbr_private.xpm. It needed
	it anyway.

	* Makefile.in:
	* bitmaps/Makefile.am: Add clsbr_private.xpm.
	* bitmaps/Makefile.in:
	* db/Makefile.in:
	* demo/Makefile.in:
	* doc/Makefile.in:
	* doc/html/Makefile.in:
	* etc/Makefile.in:
	* etc/sn_toolchains/Makefile.in:
	* gui/Makefile.in:
	* hyper/Makefile.in:
	* misc/Makefile.in:
	* misc/libutils/Makefile.in:
	* packages/Makefile.in:
	* parsers/Makefile.in:
	* parsers/assembly/Makefile.in:
	* parsers/chill/Makefile.in:
	* parsers/cobol/Makefile.in:
	* parsers/common/Makefile.in:
	* parsers/cpp/Makefile.in:
	* parsers/cpp/cpplib/Makefile.in:
	* parsers/fortran/Makefile.in:
	* parsers/gcj/Makefile.in:
	* parsers/java/Makefile.in:
	* parsers/libjcreuse/Makefile.in:
	* parsers/m4/Makefile.in:
	* parsers/python/Makefile.in:
	* parsers/sendmail/Makefile.in:
	* parsers/tcl/Makefile.in:
	* parsers/toolbox/Makefile.in:
	* sdk/Makefile.in:
	* sdk/api/Makefile.in:
	* sdk/api/c/Makefile.in:
	* sdk/api/c/database/Makefile.in:
	* sdk/api/c/database/examples/Makefile.in:
	* sdk/api/tcl/Makefile.in:
	* sdk/api/tcl/database/Makefile.in:
	* sdk/api/tcl/database/examples/Makefile.in:
	* sdk/api/tcl/misc/Makefile.in:
	* sdk/parsers/Makefile.in:
	* sdk/parsers/examples/Makefile.in:
	* sdk/parsers/examples/assembly/Makefile.in:
	* sdk/parsers/examples/elf/Makefile.in:
	* snavigator/Makefile.in:
	* snavigator/unix/Makefile.in:
	* snavigator/win/Makefile.in: Regen.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* etc/sn_toolchains/gnu-pro-native: Change
	toolchain debugger name to insight instead of gdb.
	* gui/gdbtk.tcl (sn_debugger, sn_socket_accept):
	Debug print gdb command before exec'ing it.
	Declare sn_options as global to avoid var
	error when opening in an editor as the result
	of an Insight command.
	* gui/sninit.tcl (sn_init_globals): Default
	debugger name now set to insight.
